--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -50,12 +50,21 @@ div.container4{
     box-shadow: 5px, 5px, 15px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
 }
+div.container5{
+    background: white;
+    min-width: 40vw;
+    min-height: 80vh;
+    padding: 2rem;
+    box-shadow: 5px, 5px, 15px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+}
 h1{
     font-weight: 800;
     margin-bottom: 3rem;
 }
 main h2{
     font-weight: 400;
+    margin-bottom: 2rem;
 }
 .underline{
     background: linear-gradient(to left, #dfb3c9, #54002c);
@@ -66,6 +75,23 @@ main h2{
 .underline:hover{
     background: linear-gradient(to right, #dfb3c9, #54002c);
     transition: 1s;
+}
+.underline2{
+    background: linear-gradient(to left, #dfb3c9, #54002c);
+    margin-bottom: 2rem;
+    width: 100%;
+    min-height: 2px;
+}
+.underline3{
+    background-color: #54002c;
+    margin-bottom: 2rem;
+    width: 100%;
+    min-height: 2px;
+}
+table.tabelaProduto th {
+    border: 1px solid blue;
+    border-bottom: 2px solid green;
+    background: #F0FFF0;
 }
 main h3{
     font-weight: 400;
@@ -85,6 +111,30 @@ form{
     border-radius: 5px;
 }
 .inputProduto input::placeholder{
+    color: #B09B9B;
+}
+#editarB{
+	margin-top: 2rem;
+    padding: 0.6rem;
+    width: 100%;
+    background: linear-gradient(to left, #A10A59, #54002c);
+    border-radius: 8px;
+    cursor: pointer;
+    color: white;
+    font-size: 1rem;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+}
+.tabelaProduto input{
+    margin-top: 0.3rem;
+    outline-color: #AF8BC7;
+    font-size: 1rem;
+    width: 100%;
+    color: #6B5E5E;
+    
+    border-radius: 5px;
+}
+.tabelaProduto input::placeholder{
     color: #B09B9B;
 }
 /*
