--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -16,14 +16,6 @@ body{
     align-items: center;
     justify-content: center;
 }
-div.container{
-    background: white;
-    max-width: 320px;
-    min-height: 40vh;
-    padding: 2rem;
-    box-shadow: 5px, 5px, 15px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-}
 div.container2{
     background: white;
     max-width: 320px;
@@ -33,27 +25,9 @@ div.container2{
     box-shadow: 5px, 5px, 15px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
 }
-div.container3{
-    background: white;
-    max-width: 320px;
-    min-height: 30vh;
-    padding: 2rem;
-    box-shadow: 5px, 5px, 15px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-}
 div.container4{
     background: white;
     min-width: 40vw;
-    max-width: 320px;
-    min-height: 30vh;
-    padding: 2rem;
-    box-shadow: 5px, 5px, 15px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-}
-div.container5{
-    background: white;
-    min-width: 40vw;
-    min-height: 80vh;
     padding: 2rem;
     box-shadow: 5px, 5px, 15px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
@@ -64,7 +38,6 @@ h1{
 }
 main h2{
     font-weight: 400;
-    margin-bottom: 2rem;
 }
 .underline{
     background: linear-gradient(to left, #dfb3c9, #54002c);
@@ -77,21 +50,10 @@ main h2{
     transition: 1s;
 }
 .underline2{
-    background: linear-gradient(to left, #dfb3c9, #54002c);
-    margin-bottom: 2rem;
-    width: 100%;
-    min-height: 2px;
-}
-.underline3{
     background-color: #54002c;
     margin-bottom: 2rem;
     width: 100%;
     min-height: 2px;
-}
-table.tabelaProduto th {
-    border: 1px solid blue;
-    border-bottom: 2px solid green;
-    background: #F0FFF0;
 }
 main h3{
     font-weight: 400;
@@ -101,7 +63,7 @@ form{
     display: flex;
     flex-direction: column;
 }
-.inputProduto input{
+.input-geral input{
     margin-top: 0.3rem;
     outline-color: #AF8BC7;
     font-size: 1rem;
@@ -110,11 +72,20 @@ form{
     
     border-radius: 5px;
 }
-.inputProduto input::placeholder{
+.input-geral input::placeholder{
     color: #B09B9B;
 }
-#editarB{
-	margin-top: 2rem;
+.asterisco{
+	font-size: 1rem;
+	color: red;
+}
+/*
+form .input-login:first-child{
+    margin-bottom: 1rem;
+}
+*/
+form input[type="submit"]{
+    margin-top: 2rem;
     padding: 0.6rem;
     width: 100%;
     background: linear-gradient(to left, #A10A59, #54002c);
@@ -125,25 +96,8 @@ form{
     font-weight: 500;
     letter-spacing: 0.5px;
 }
-.tabelaProduto input{
-    margin-top: 0.3rem;
-    outline-color: #AF8BC7;
-    font-size: 1rem;
-    width: 100%;
-    color: #6B5E5E;
-    
-    border-radius: 5px;
-}
-.tabelaProduto input::placeholder{
-    color: #B09B9B;
-}
-/*
-form .input-login:first-child{
-    margin-bottom: 1rem;
-}
-*/
 form input[type="button"]{
-    margin-top: 2rem;
+    margin-top: 1rem;
     padding: 0.6rem;
     width: 100%;
     background: linear-gradient(to left, #A10A59, #54002c);
@@ -158,8 +112,42 @@ form input[type="button"]:hover{
     letter-spacing: 1px;
     background: linear-gradient(to right, #A10A59, #54002c);
 }
+form input[class="exProdutos"]{
+    margin-top: 0.1rem;
+    padding: 0.6rem;
+    width: 4rem;
+    height: 1.8rem;
+    background: #DE0B2C;
+    border-radius: 10px;
+    cursor: pointer;
+    color: white;
+    font-size: 0.8rem;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    
+}
+form input[class="exProdutos"]:hover{
+    letter-spacing: 1px;
+}
+form input[class="edProdutos"]{
+    margin-top: 0.1rem;
+    padding: 0.6rem;
+    width: 4rem;
+    height: 1.8rem;
+    background: #42B305;
+    border-radius: 10px;
+    cursor: pointer;
+    color: white;
+    font-size: 0.8rem;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    
+}
+form input[class="edProdutos"]:hover{
+    letter-spacing: 1px;
+}
 form input[type="reset"]{
-    margin-top: 2rem;
+    margin-top: 1rem;
     padding: 0.6rem;
     width: 100%;
     background: linear-gradient(to left, #A10A59, #54002c);
@@ -174,22 +162,6 @@ form input[type="reset"]:hover{
     letter-spacing: 1px;
     background: linear-gradient(to right, #A10A59, #54002c);
 }
-form input[type="submit1"]{
-    margin-top: 2rem;
-    padding: 0.6rem;
-    width: 19%;
-    background: linear-gradient(to left, #A10A59, #54002c);
-    border-radius: 8px;
-    cursor: pointer;
-    color: white;
-    font-size: 1rem;
-    font-weight: 500;
-    letter-spacing: 0.5px;
-}
-form input[type="submit1"]:hover{
-    letter-spacing: 1px;
-    background: linear-gradient(to right, #A10A59, #54002c);
-}
 form input[id="novo"]{
     margin-top: 0.3rem;
 }
@@ -201,18 +173,40 @@ form input[id="trocaSenha"]{
     cursor: pointer;
     font-size: 0.8rem;
 }
+form input[type="submit"]:hover{
+    letter-spacing: 1px;
+    background: linear-gradient(to right, #A10A59, #54002c);
+}
 form input[id="trocaSenha"]:hover{
     letter-spacing: 0.8px;
     background: none;
 }
-form input[type="text"]:hover{
+.input-geral input:hover{
     letter-spacing: 0.5px;
 }
 .radioChacks{
     margin-top: 1rem;
 }
-.asterisco{
-	color: red;
-	font-size: 1rem;
+th, td{
+	padding: 0.5rem 1rem;
 }
-
+tr:hover{
+	background: #D3D2D9;
+	
+}
+form a[class="bProdutos"]{
+    margin-top: 1rem;
+    padding: 0.6rem;
+    width: 100%;
+    background: linear-gradient(to left, #A10A59, #54002c);
+    border-radius: 8px;
+    cursor: pointer;
+    color: white;
+    font-size: 1rem;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+}
+form a[class="bProdutos"]:hover{
+    letter-spacing: 1px;
+    background: linear-gradient(to right, #A10A59, #54002c);
+}
